# ollama-api-access

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
src/: chat_ui.rs  main.rs
