[package]
name = "ollama-api-access"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.3.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", features = ["json"] }
